--- a/Web Designing/CSS/9 Website/public/css/style.css
+++ b/Web Designing/CSS/9 Website/public/css/style.css
@@ -18,8 +18,11 @@
 #header {
     height: 70px;
     padding: 10px;
-    color:orange;
-    background-color: whitesmoke;
+    color:white;
+    background-color: olive;
+    top:0;
+    position: sticky;
+    z-index: 1;
 }
 
 #logo_section {
@@ -46,8 +49,8 @@
 
 #nav {
     height: 100%;
-    width: 860px;
-    /* background-color: olive; */
+    width: 850px;
+    /* background-color: green; */
     float: left;
 }
 
@@ -63,8 +66,8 @@
 #nav ul li a {
     text-decoration: none;
     font-size: 22px;
-    margin-left: 45px;
-    color:orange;
+    margin-left: 40px;
+    color:white;
 }
 #nav ul li a:hover{
     color:brown;
@@ -77,17 +80,136 @@
     position: absolute;
     width:180px;
     margin-left: 220px;
-    background-color: whitesmoke;
+    background-color: olive;
 }
 #nav ul li ul li{
     margin-left: -30px;
     line-height: 40px;
 }
 #banner{
-    height: 580px;
-    /* background-color: red; */
+    height: 520px;
+    background-color: red;
 }
 #bannerImg{
     height: 520px;
-    width: 1205px;
+    width: 1194px;
+}
+#mqdemo{
+    padding: 10px;
+    height: 40px;
+    background-color: white;
+    font-size: 20px;
+}
+#content{
+    padding: 50px;
+    height: 300px;
+    background-color: whitesmoke;
+    font-size: 18px;
+}
+#boxes{
+    height: 400px;
+    padding: 50px;
+    /* background-color: crimson; */
+}
+#box{
+    height: 330px;
+    background-color: blue;
+    width: 300px;
+    float: left;
+    margin-left: 50px;
+    box-shadow: 1px 1px 20px 1px;
+}
+#boxImage{
+    height: 200px;
+    background-color: brown;
+      overflow: hidden;
+}
+#boxImg{
+    height: 200px;
+    width: 100%;
+}
+#boxImg:hover
+{
+    transition: 2s;
+    transform: scale(1.3);
+}
+#boxContent{
+    height: 115px;
+    background-color: olive;
+    padding: 10px;
+    color:white;
+}
+#boxContent button{
+    height:32px;
+    width: 270px;
+    border-width: 0px;
+    background-color: crimson;
+    color:white;
+    font-size: 16px;
+    margin: 3px;
+}
+#boxContent button:hover{
+    background-color: black;
+    color:white;
+}
+#about{
+    height: 450px;
+    padding: 50px;
+    background-color: whitesmoke;
+}
+#aboutleft{
+    height: 300px;
+    width: 300px;
+    /* background-color: red; */
+    border-radius: 50%;
+    margin: 10px;
+    margin-top: 40px;
+    float: left;
+}
+#aboutright{
+    float: left;
+    height: 270px;
+    width: 680px;
+    /* background-color: red; */
+    padding: 35px;
+    margin: 10px;
+    font-size: 18px;
+    text-align: justify;
+}
+#contact{
+    height: 380px;
+    padding: 50px;
+    /* background-color: green; */
+}
+#contactBox1{
+    height: 280px;
+    padding: 10px;
+    width: 220px;
+    background-color: olive;
+    float: left;
+    margin: 5px;
+    color:white;
+}
+#contactBox1 ul li a{
+    text-decoration: none;
+    color:white;
+    font-size: 19px;
+    line-height: 32px;
+}
+#contactBox2{
+    height: 300px;
+    width: 330px;
+    /* background-color: red; */
+    float: left;
+    margin: 5px;
+}
+iframe{
+     height: 300px;
+    width: 330px;
+}
+#footer{
+    height: 30px;
+    padding: 5px;
+    background-color: whitesmoke;
+    font-size: 18px;
 }
