--- a/SpringBoot/15_ITEP_springboot_spring_security_emailfield/15_ITEP_springboot_spring_security_emailfield/src/main/resources/templates/login.html
+++ b/SpringBoot/15_ITEP_springboot_spring_security_emailfield/15_ITEP_springboot_spring_security_emailfield/src/main/resources/templates/login.html
@@ -14,9 +14,9 @@
 		<form th:action="@{/doLogin}" method="post">
 			<input
 				type="text"
-				placeholder="Enter username"
-				name="username"
-				id="username"
+				placeholder="Enter email"
+				name="email"
+				id="email"
 				required
 			> <br>
 			<input
